--- a/src/LifeExpectancy_Nigeria.ipynb
+++ b/src/LifeExpectancy_Nigeria.ipynb
@@ -947,7 +947,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1159788e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11658c610>"
       ]
      },
      "execution_count": 18,
